--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">Inicio</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">&nbsp; &nbsp;Menú &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Nosotros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Block</a></li>
+                    <a class="nav-link link text-black display-4" href="index.html">Inicio</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">&nbsp; &nbsp;Menú &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Nosotros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Block</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-black display-4" href="page3.html">
                         Contacto</a>
                 </li></ul>
             
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="carousel slide cid-rfo0i83UCY" data-interval="false" id="slider1-j">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="carousel slide cid-rfo0i83UCY" data-interval="false" id="slider1-j">
 
     
 
