--- a/page2.html
+++ b/page2.html
@@ -53,10 +53,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">Inicio</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">&nbsp; &nbsp;Menú &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Nosotros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Block</a></li>
+                    <a class="nav-link link text-black display-4" href="index.html">Inicio</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">&nbsp; &nbsp;Menú &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Nosotros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Block</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-black display-4" href="page3.html">
                         Contacto</a>
                 </li></ul>
             
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rfQvkIsR73" id="header16-2m">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-rfQvkIsR73" id="header16-2m">
 
     
 
@@ -124,7 +124,7 @@
                 <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="a101fQZ1IMH2xtxTL+hhnEdJ5FUf1cRfFq5lK57/pt/N/YVyknoPmVJBtPFr/kpaUsti1gZLnd/m1j66Miht3EJyHJJFNVLdPcRgguTIsugQ+nZ9YpfWxedRrEHhWQuK">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BA5zS7Jgfig0loH6HLuJvn5ISHkOBBYomBP+2Dy0R+4TmPvJ1iFDcvaWUj75gp6HUozwkllRoSypYdFOLNS65ymidJAXHB12LkYGoYA5z9TecUXGwltP8K1nehKwdGE5">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-32">
                         <span class="input-group-btn">
