--- a/page6.html
+++ b/page6.html
@@ -48,10 +48,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">Inicio</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">&nbsp; &nbsp;Menú &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Nosotros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Block</a></li>
+                    <a class="nav-link link text-black display-4" href="index.html">Inicio</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">&nbsp; &nbsp;Menú &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">Nosotros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">Block</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-black display-4" href="page3.html">
                         Contacto</a>
                 </li></ul>
             
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-rfQk2AsecM" id="header16-28">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header1 cid-rfQk2AsecM" id="header16-28">
 
     
 
