--- a/page2.html
+++ b/page2.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-rfQvkIsR73" id="header16-2m">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header1 cid-rfQvkIsR73" id="header16-2m">
 
     
 
@@ -124,7 +124,7 @@
                 <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BA5zS7Jgfig0loH6HLuJvn5ISHkOBBYomBP+2Dy0R+4TmPvJ1iFDcvaWUj75gp6HUozwkllRoSypYdFOLNS65ymidJAXHB12LkYGoYA5z9TecUXGwltP8K1nehKwdGE5">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3dzx/6uI/7EcmpZ6APbOSfDlxekWFHQMDe34ZV51zVGsJhhk4vl8g/fpc8q3XguEa3Hx5E316JIZeh/jxJO4jErKfadYV2aaj0VN6C4fVSIUrwJ5i15INfOaDCdciN/1">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-32">
                         <span class="input-group-btn">
