--- a/page6.html
+++ b/page6.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="header1 cid-rfQk2AsecM" id="header16-28">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header1 cid-rfQk2AsecM" id="header16-28">
 
     
 
