--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="carousel slide cid-rfo0i83UCY" data-interval="false" id="slider1-j">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="carousel slide cid-rfo0i83UCY" data-interval="false" id="slider1-j">
 
     
 
@@ -253,7 +253,7 @@
     </div>
 </section>
 
-<section class="cid-rfuS8Vmnpg mbr-reveal" id="footer2-1a">
+<section class="cid-rfuS8Vmnpg" id="footer2-1a">
 
     
 
